--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -67,6 +67,12 @@
         <button id="reauthorizeBtn" class="btn-secondary">Re-Authorize</button>
     </div>
 
+    <hr style="margin: 15px 0; border: none; border-top: 1px solid #dddbda;">
+    <div class="button-group" id="standalone-group">
+        <span style="font-size: 11px; color: #54698d; text-transform: uppercase; letter-spacing: 0.5px; margin-bottom: 4px;">Standalone Tools</span>
+        <button id="openAuraBtn" class="btn-secondary">Open Aura Debugger</button>
+    </div>
+
     <div id="status">Checking session...</div>
     <script src="popup.js"></script>
 </body>
