--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -75,7 +75,12 @@
         <span style="font-size: 11px; color: #54698d; text-transform: uppercase; letter-spacing: 0.5px; margin-bottom: 4px;">Standalone Tools</span>
         <button id="openAuraBtn" class="btn-secondary">Open Aura Debugger</button>
     </div>
-    
+
+    <hr style="margin: 15px 0; border: none; border-top: 1px solid #dddbda;">
+    <div class="button-group">
+        <button id="settingsBtn" class="btn-secondary">Settings</button>
+    </div>
+
     <script src="popup.js"></script>
 </body>
 </html>
