--- a/src/callback/callback.html
+++ b/src/callback/callback.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Authenticating...</title>
+    <link rel="icon" type="image/png" href="../../icon.png">
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
