--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -3,6 +3,7 @@
 <head>
     <title>sftools</title>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="../../icon.png">
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
