--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
     <div class="app-container">
         
         <nav class="tab-nav">
-            <div class="nav-brand">sftools</div>
+            <div class="nav-brand"><img src="../icon.png" alt="" class="nav-brand-icon">sftools</div>
             <div class="tab-scroll-container">
                 <button class="tab-link active" data-tab="query">Query</button>
                 <button class="tab-link" data-tab="apex">Apex</button>
