Moved side panel and fixed issue

--- a/src/aura/aura.html
+++ b/src/aura/aura.html
@@ -316,7 +316,7 @@
                     for legitimate development and debugging purposes only.
                 </p>
 
-                <div class="disclaimer-checkbox-container" onclick="document.getElementById('disclaimerCheckbox').click()">
+                <div class="disclaimer-checkbox-container">
                     <input type="checkbox" id="disclaimerCheckbox">
                     <label for="disclaimerCheckbox">
                         I confirm that I have authorization to use this tool on the Salesforce org(s) I intend
