--- a/src/app.html
+++ b/src/app.html
@@ -34,6 +34,14 @@
                     <path d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
                 </svg>
             </button>
+            <button id="side-panel-btn" class="nav-icon-btn" title="Open in Side Panel">
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
+                    <path d="M2 1h12a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zm0-1a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                    <path d="M5 1v14H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h3z"/>
+                    <rect x="2.5" y="4" width="1.5" height="1" rx="0.25"/>
+                    <rect x="2.5" y="6.5" width="1.5" height="1" rx="0.25"/>
+                </svg>
+            </button>
         </nav>
 
         <main class="content-area">
