--- a/src/pages/callback/callback.html
+++ b/src/pages/callback/callback.html
@@ -41,6 +41,6 @@
         <div class="loader">Verifying Salesforce Session...</div>
         <div id="status">Please wait while we process the secure tokens.</div>
     </div>
-    <script src="callback.js"></script>
+    <script type="module" src="callback.js"></script>
 </body>
 </html>
