--- a/src/pages/aura/aura.html
+++ b/src/pages/aura/aura.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aura Debugger - sftools</title>
     <link rel="icon" type="image/png" href="../../icon.png">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../style.css">
     <style>
         /* Aura-specific standalone styles */
         .standalone-header {
