--- a/src/pages/popup/popup.html
+++ b/src/pages/popup/popup.html
@@ -88,6 +88,6 @@
         <button id="settingsBtn" class="btn-secondary">Settings</button>
     </div>
 
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
 </body>
 </html>
