--- a/src/pages/aura/aura.html
+++ b/src/pages/aura/aura.html
@@ -419,7 +419,7 @@
                 <h2>Request Parameters</h2>
             </div>
             <div class="card-body">
-                <div id="paramsEditor" class="monaco-container"></div>
+                <monaco-editor id="paramsEditor" class="monaco-container" language="json"></monaco-editor>
             </div>
         </div>
 
@@ -434,7 +434,7 @@
                 <h2>Response</h2>
             </div>
             <div class="card-body" style="padding-bottom: 0;">
-                <div id="responseEditor" class="monaco-container monaco-container-lg"></div>
+                <monaco-editor id="responseEditor" class="monaco-container monaco-container-lg" language="json" readonly></monaco-editor>
                 <div id="responseResizer" class="resizer">
                     <div class="resizer-grip"></div>
                 </div>
